<resources>
    <string name="app_name">ToDo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_task">Create your task!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="edit_task">Edit your task!</string>
    <string name="edit">Edit</string>
</resources>